--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>website assignment</title>
 	<link rel="stylesheet" href="website assignment.css">
-	<link rel="stylesheet" href="D:\Problems\HTML\fontawesome\css\all.css">
+	<link rel="stylesheet" href="fontawesome\css\all.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
 </head>
 <body>
@@ -13,10 +13,10 @@
 	</header>
 	<nav class="animate__animated animate__zoomInDown">
 		<a href="#home"><span class="fas fa-home"></span>Home</a>
-		<a href="D:\Problems\HTML\news.html"><span class="fas fa-newspaper"></span>News</a>
-		<a href="D:\Problems\HTML\gallery.html"><span class="fas fa-images"></span>Gallery</a>
-		<a href="D:\Problems\HTML\about us.html"><span class="fas fa-address-card"></span>About</a>
-		<a href="D:\Problems\HTML\contact us.html"><span class="fas fa-phone-square-alt"></span>Contact us</a>
+		<a href="news.html"><span class="fas fa-newspaper"></span>News</a>
+		<a href="gallery.html"><span class="fas fa-images"></span>Gallery</a>
+		<a href="about us.html"><span class="fas fa-address-card"></span>About</a>
+		<a href="contact us.html"><span class="fas fa-phone-square-alt"></span>Contact us</a>
 	</nav>
 	<section class="all">
 	<section id="a">
